--- a/javaGameMVC/src/main/resources/application.properties
+++ b/javaGameMVC/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=javaGameMVC
+spring.datasource.url=jdbc:postgres://localhost:5432/gamesdb
+spring.datasource.username=gamemaster
+spring.datasource.password=crazydiamondo
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
