added dockerfile and docker-compose, updated application properties

--- a/javaGameMVC/src/main/resources/application.properties
+++ b/javaGameMVC/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=javaGameMVC
-spring.datasource.url=jdbc:postgresql://localhost:5432/gamesdb
+spring.datasource.url=jdbc:postgresql://db:5434/gamesdb
 spring.datasource.username=gamemaster
 spring.datasource.password=crazydiamondo
 spring.jpa.hibernate.ddl-auto=update
