--- a/javaGameMVC/src/main/resources/application.properties
+++ b/javaGameMVC/src/main/resources/application.properties
@@ -2,5 +2,8 @@ spring.application.name=javaGameMVC
 spring.datasource.url=jdbc:postgresql://db:5434/gamesdb
 spring.datasource.username=gamemaster
 spring.datasource.password=crazydiamondo
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
