--- a/javaGameMVC/pom.xml
+++ b/javaGameMVC/pom.xml
@@ -68,6 +68,12 @@
         <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
+            <version>10.20.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-database-postgresql</artifactId>
+            <version>10.20.1</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
